Updated lessons_controller and spec

--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -1,5 +1,6 @@
-<li><%= @lesson.title %></li>
-<li><%= @lesson.author %></li>
-<li><%= @lesson.updated_at %></li>
-<li><%= @lesson.body %></li>
-<li><%= @lesson.url %></li>
+<h><%= @lesson.title %></h>
+<h3>Made by: <%= @lesson.author %> </h3>
+<h2>Lesson Summary</h2>
+<p><%= @lesson.body %> </p>
+<br/>
+<h2> <a href=<%= @lesson.url %> id='url_redirect'> Take me there! </a></h2>
