--- a/app/views/feedback/new.html.erb
+++ b/app/views/feedback/new.html.erb
@@ -3,7 +3,7 @@
   <%= simple_form_for "/feedback", :html => {:class => 'form-horizontal' } do |f| %>
     <%= f.input :name, :required => true %>
     <%= f.input :email, :required => true %>
-    <%= f.input :message, :as => :text, :required => true %>
+    <%= f.input :feedback, :as => :text, :required => true %>
     <div>
       </br>
       <%= f.button :submit, 'Send message', :class=> "btn btn-primary" %>
