--- a/app/views/feedback/new.html.erb
+++ b/app/views/feedback/new.html.erb
@@ -1,6 +1,6 @@
 <div align="center">
   <h3>Send A message to Us</h3>
-  <%= simple_form_for "/feedback", :html => {:class => 'form-horizontal' } do |f| %>
+  <%= simple_form_for @feedback, :html => {:class => 'form-horizontal' } do |f| %>
     <%= f.input :name, :required => true %>
     <%= f.input :email, :required => true %>
     <%= f.input :message, :as => :text, :required => true %>
