--- a/app/views/feedback/new.html.erb
+++ b/app/views/feedback/new.html.erb
@@ -1,19 +1,41 @@
-<div align="center">
-  <h3>Send A message to Us</h3>
-  <%= simple_form_for @feedback, :html => {:class => 'form-horizontal' } do |f| %>
-    <%= f.input :name, :required => true %>
-    <%= f.input :email, :required => true %>
-    <%= f.input :message, :as => :text, :required => true %>
+<%if !user_signed_in?%>
+  <div align="center">
+    <h3>Send A message to Us</h3>
+    <%= simple_form_for @feedback, :html => {:class => 'form-horizontal' } do |f| %>
+      <%= f.input :name, :required => true %>
+      <%= f.input :email, :required => true %>
+      <%= f.input :message, :as => :text, :required => true %>
+      <div>
+        </br>
+        <%= f.button :submit, 'Send message', :class=> "btn btn-primary" %>
+      </div>
+    <% end %>
     <div>
-      </br>
-      <%= f.button :submit, 'Send message', :class=> "btn btn-primary" %>
+    <% flash.each do |key, value| %>
+      <div>
+        <a href="#" data-dismiss="alert">×</a>
+          <%= value %>
+      </div>
+    <% end %>
     </div>
-  <% end %>
-  <div>
-  <% flash.each do |key, value| %>
-    <div>
-      <a href="#" data-dismiss="alert">×</a>
-        <%= value %>
-    </div>
-  <% end %>
   </div>
+  <% else %>
+    <div align="center">
+      <h3>Send A message to Us</h3>
+      <%= simple_form_for @feedback, :html => {:class => 'form-horizontal' } do |f| %>
+        <%= f.input :message, :as => :text, :required => true %>
+        <div>
+          </br>
+          <%= f.button :submit, 'Send message', :class=> "btn btn-primary" %>
+        </div>
+      <% end %>
+      <div>
+      <% flash.each do |key, value| %>
+        <div>
+          <a href="#" data-dismiss="alert">×</a>
+            <%= value %>
+        </div>
+      <% end %>
+    </div>  
+  </div>
+  <% end %>
