--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -3,3 +3,10 @@
 <p><%= @question.body%></p>
 <br/>
 <h2>Comments:</h2>
+<ul>
+    <% @comments.each do |comment| %>
+        <li> <%= comment.user.first_name + " " + comment.user.last_name%></li>
+        <li> <%= comment.body %></li>
+        <br/>
+    <% end %>
+</ul>
