--- a/app/views/feedback/new.html.erb
+++ b/app/views/feedback/new.html.erb
@@ -23,6 +23,8 @@
     <div align="center">
       <h3>Send A message to Us</h3>
       <%= simple_form_for @feedback, :html => {:class => 'form-horizontal' } do |f| %>
+        <%= f.input :name, :as => :hidden, :input_html => { :value => current_user.name }%>
+        <%= f.input :email, :as => :hidden, :input_html => { :value => current_user.email } %>
         <%= f.input :message, :as => :text, :required => true %>
         <div>
           </br>
