--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,7 +1,7 @@
 <div align="center">
     <h3>Post a New Question</h3>
     <%= simple_form_for @question, :html => {:class => 'form-horizontal' } do |f| %>
-        <%= f.input :user, :as => :hidden, :input_html => {:value => current_user}%>
+        <%= f.input :user, :as => :hidden, :input_html => { :value => current_user.id }%>
         <%= f.input :title, :required => true %>
         <%= f.input :body, :required => true %>
         <div>
