--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,12 +1,8 @@
 <div align="center">
     <h3>Post a New Question</h3>
-    <%= simple_form_for @question, :html => {:class => 'form-horizontal' } do |f| %>
-        <%= f.input :user, :as => :hidden, :input_html => { :value => current_user.id }%>
-        <%= f.input :title, :required => true %>
-        <%= f.input :body, :required => true %>
-        <div>
-            </br>
-            <%= f.button :submit, 'Post Question', :class=> "btn btn-primary" %>
-        </div>
-        <% end %>
+    <%= simple_form_for @question do |f| %>
+        <%= f.input :title %>
+        <%= f.input :body %>
+        <%= f.button :submit, 'Post Question' %>
+    <% end %>
 </div>
