--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,6 +1,7 @@
 <div align="center">
     <h3>Post a New Question</h3>
     <%= simple_form_for @question do |f| %>
+        <%= f.input :id, :as => :hidden, :input_html => { :value => current_user.id }%>
         <%= f.input :title %>
         <%= f.input :body %>
         <%= f.button :submit, 'Post Question' %>
