--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
   <ul class="hmenu">
   <%= render 'devise/sessions/login_items' %>
+  <%= render 'organisational_logic/add_student' %> 
   </ul>
 </head>
 <body>
