updated profile to include username

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,2 +1,3 @@
 <h><%= @profile_page[:user].first_name + " " + @profile_page[:user].last_name %></h>
 <h3>Email address: <%= @profile_page[:user].email %></h3>
+<h3>Username: <%= @profile_page[:user].username %> </h3>
